--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <script type="module" src="node_modules/audako-core-components/dist/main.js" ></script>    
+    <script type="module" src="node_modules/audako-core/dist/main.js" ></script>    
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script type="module">
+        import { TenantSelect } from './node_modules/audako-core-components/dist/main.js';
+        console.log(TenantSelect);
+        customElements.define("tenant-select", TenantSelect.default);
+    </script>
+
     <title>Document</title>
 </head>
 <body>
