--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,21 @@
   window.global = window;
 </script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<style>
+
+  html {
+    height: 100%;
+    overflow: hidden;
+  }
+
+  body {
+    height: 100%;
+    overflow: hidden;
+  }
+
+  body #root {
+    height: 100%;
+    overflow: hidden;
+  }
+
+</style>
