--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,9 +1,11 @@
 <script>
   window.global = window;
 </script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
 <style>
-
   html {
     height: 100%;
     overflow: hidden;
@@ -18,5 +20,4 @@
     height: 100%;
     overflow: hidden;
   }
-
 </style>
